--- a/css/style.css
+++ b/css/style.css
@@ -77,18 +77,17 @@ header div#buscador
 }
 nav#menu{
 	border: 1px solid red;
-	width: 790px;
+	width: 900px;
 	margin: 0 auto;
+	height: 70px;
 }
 nav#menu ul{
 	border: 1px solid green;
-
+	margin-left: 12px;
 }
 
 nav#menu ul li{
-	display: inline-block;
-	margin: 0px;	
-	
+	display: inline-block;		
 }
 nav#menu ul li a{
 	text-align: center;
@@ -97,6 +96,54 @@ nav#menu ul li a{
 	background-color:#176990; 
 	display: block;
 	color: white;
-	margin: 0px;
-
+	padding: 16px;
+	border: 1px solid yellow;
 } 
+div#slider{
+	width: 1024px;
+	border: 1px solid red;
+
+}
+div#slider img{
+	width: 1024px;
+}
+section#contenido{
+	width: 790px;
+	height: 500px;
+	margin: 0 auto;
+	border: 1px solid orange;
+}
+div#izq, div#der{
+	display: inline-block;
+	height: 400px;
+	border: 1px solid red;
+	vertical-align: top;	
+}
+div#izq{
+	width: 550px;
+}
+div#der{
+	width: 225px;
+}
+h2{	
+	display: inline-block;
+	font-size: 1.1em;
+	font-weight: bold;
+	color: #333;
+	margin-left: 25px;
+	margin-right: 25px;
+}
+span.linea{
+	border-top: 1px solid #999;
+	width: 180px;
+	
+	margin-top: -4px;
+	display: inline-block;
+	vertical-align: middle;
+
+}
+div#titulo{
+	border: 1px solid black;
+	width: 510px;
+	margin:0 auto;
+}
