--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,14 @@
 body
 {
 	font-size: 16px;	
-}
-div#centrar
-{
 	background-color: #ebebeb;
-	border: 1px solid red;
-	height: 1200px;
-	margin: 0 auto;
-	width: 1024px;
 }
+
 aside#arriba
 {
 	background-color: #910b26;
 	height: 50px;
+	width: 100%;
 }
 aside #arriba_center
 {
@@ -49,6 +44,14 @@ div#redes
 	display: inline-block;
 	border: 1px solid yellow;
 	width: 32px;
+}
+div#centrar
+{
+	background-color: #ebebeb;
+	border: 1px solid red;
+	height: 2200px;
+	margin: 0 auto;
+	width: 1100px;
 }
 header
 {
@@ -96,35 +99,40 @@ nav#menu ul li a{
 	background-color:#176990; 
 	display: block;
 	color: white;
-	padding: 16px;
+	padding: 18px;
 	border: 1px solid yellow;
 } 
 div#slider{
-	width: 1024px;
+	width: 1100px;
 	border: 1px solid red;
 
 }
 div#slider img{
-	width: 1024px;
+	width: 1100px;
 }
 section#contenido{
-	width: 790px;
-	height: 500px;
+	width: 1010px;
+	/*height: 600px;*/
 	margin: 0 auto;
-	border: 1px solid orange;
+	/*border: 2px solid orange;*/
 }
 div#izq, div#der{
 	display: inline-block;
-	height: 400px;
+	
 	border: 1px solid red;
 	vertical-align: top;	
 }
 div#izq{
-	width: 550px;
+	width: 750px;
+	height: 720px;
 }
 div#der{
-	width: 225px;
+	height: 630px;
+	width: 245px;
+	background-color: #e0dedc;
+	margin-top: 15px;
 }
+
 h2{	
 	display: inline-block;
 	font-size: 1.1em;
@@ -135,8 +143,7 @@ h2{
 }
 span.linea{
 	border-top: 1px solid #999;
-	width: 180px;
-	
+	width: 260px;
 	margin-top: -4px;
 	display: inline-block;
 	vertical-align: middle;
@@ -144,6 +151,102 @@ span.linea{
 }
 div#titulo{
 	border: 1px solid black;
-	width: 510px;
+	width: 710px;
 	margin:0 auto;
+}
+.noti{
+	width: 230px;
+	background-color: red;
+	display: inline-block;
+	margin-right: 10px;
+	margin-top: 25px;
+}
+.noti img{
+	width: 230px;
+	display: block;
+}
+.notiTexto{
+	width: 228px;
+	border: 1px solid red;
+	display: inline-block;
+	margin-right: 10px;
+
+	
+}
+.notiTexto>p{
+	color: #666;
+	font-weight: bold;
+	background-color: red;
+}
+.notiTexto > span{
+	text-align:justify;
+	background-color: red;
+	display: block;
+	color: #666;
+}
+/* Parte derecha*/ 
+div#eventos{
+	width: 230px;
+	background-color: white;
+	height: 400px;
+	margin: 5px auto;
+}
+#textoEven,#vermas{
+	display: inline-block;
+}
+p#textoEven{
+	color: #666;
+	font-size: 20px;
+	margin: 25px 10px 5px 10px;
+}
+a#vermas{
+	background-color: white;
+	color: #666;
+	border:1px solid #666;
+	border-radius: 3px;
+	text-decoration: none;
+	padding: 4px;
+	vertical-align: top;
+	margin: 25px 0px 5px 60px;
+	font-size: 0.6em;
+
+}
+.listaEven{
+	margin: 10px 0px 10px 10px;
+	border:1px solid red;
+	width: 208px;
+	height: 100px;
+}
+.cuadrado{
+	width: 80px;
+	height: 80px;
+	background-color: #666;
+	
+}
+.title{
+	margin: 5px;
+}
+.cuadrado,.title{
+	display: inline-block;
+	vertical-align: top;
+}
+
+.va1,.va2{
+	border:1px solid red;
+	display: inline-block;
+}
+.va1{
+	margin: 5px 0px 0px 4px;
+}
+.va2{
+	margin: -20px 0px 0px 100px;
+	font-size: 12px;
+}
+#calendario{
+	margin: 0 auto;
+	width: 200px;
+	margin-top: 5px;
+}
+#calendario img{
+	width: 200px;
 }
