--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,31 @@
 
 /*Branch master*/
 
+
+
 @font-face {
-  font-family: NewLetra;
-  src: url(../font/Quattrocento-Regular.otf);
+    font-family: 'letra2';
+    src: url('../font/quattrocento-regular-webfont.eot');
+    src: url('../font/quattrocento-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/quattrocento-regular-webfont.woff2') format('woff2'),
+         url('../font/quattrocento-regular-webfont.woff') format('woff'),
+         url('../font/quattrocento-regular-webfont.ttf') format('truetype'),
+         url('../font/quattrocento-regular-webfont.svg#quattrocento_romanregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'letra1';
+    src: url('../font/lato-regular-webfont.eot');
+    src: url('../font/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/lato-regular-webfont.woff2') format('woff2'),
+         url('../font/lato-regular-webfont.woff') format('woff'),
+         url('../font/lato-regular-webfont.ttf') format('truetype'),
+         url('../font/lato-regular-webfont.svg#latoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 
@@ -11,7 +33,7 @@ body
 {
 	font-size: 16px;	
 	background-color: #ebebeb;
-	font-family: NewLetra;
+	font-family: 'letra2';
 }
 
 aside#arriba
@@ -22,7 +44,7 @@ aside#arriba
 }
 aside #arriba_center
 {
-	width: 780px;
+	width: 910px;
 	/*border:1px solid green;*/
 	margin: 0 auto;
 	height: 50px;
@@ -40,10 +62,22 @@ a#home
 	color: white;
 	padding: 5px;
 	text-transform: uppercase;
-	margin: 10px 0px 0px 10px;
+	margin: 10px 0px 0px 0px;
 	font-size: 0.8em;
+	font-family: 'letra1';
+	font-weight: bold;
 
 }
+a#home:hover{
+	background-color: white;
+	color: black;
+	-webkit-transition: all 300ms ease-out;
+	-moz-transition: all 300ms ease-out;
+	-ms-transition: all 300ms ease-out;
+	-o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}	
+
 div#redes
 {
 	float: right;
@@ -105,7 +139,19 @@ nav#menu ul li a{
 	padding: 18px;
 	border: 1px solid white;
 	width: 115px;
+	font-family: 'letra1';
+	font-weight: bold;
 } 
+nav#menu ul li a:hover{
+	background-color: #910B26;
+	-webkit-transition: all 500ms ease-out;
+	-moz-transition: all 500ms ease-out;
+	-ms-transition: all 500ms ease-out;
+	-o-transition: all 500ms ease-out;
+    transition: all 500ms ease-out;
+
+
+}
 div#slider{
 	width: 100%;
 	/*border: 1px solid red;*/
@@ -130,9 +176,11 @@ div#izq, div#der{
 }
 div#izq{
 	width: 750px;
-	height: 720px;
+	margin-bottom: 20px;
+	/*border: 1px solid red;*/
 }
 div#der{
+	/*border:1px solid red;*/
 	height: 650px;
 	width: 245px;
 	background-color: #e0dedc;
@@ -146,6 +194,7 @@ h2{
 	color: #333;
 	margin-left: 25px;
 	margin-right: 25px;
+	font-family: 'letra1';
 }
 span.linea{
 	border-top: 1px solid #999;
@@ -166,6 +215,7 @@ div#titulo{
 	display: inline-block;
 	margin-right: 10px;
 	margin-top: 25px;
+
 }
 .noti img{
 	width: 230px;
@@ -175,8 +225,8 @@ div#titulo{
 	width: 228px;
 	/*border: 1px solid red;*/
 	display: inline-block;
-	margin-right: 10px;
-
+	margin: 0px 10px 20px 0px;
+	font-family: 'letra1'
 	
 }
 .notiTexto>p{
@@ -189,6 +239,7 @@ div#titulo{
 	/*background-color: red;*/
 	display: block;
 	color: #666;
+	/*font-family: 'arial';*/
 }
 /* Parte derecha*/ 
 div#eventos{
@@ -204,6 +255,7 @@ p#textoEven{
 	color: #666;
 	font-size: 20px;
 	margin: 25px 10px 5px 10px;
+	font-family: 'letra1';
 }
 a#vermas{
 	background-color: white;
@@ -215,7 +267,12 @@ a#vermas{
 	vertical-align: top;
 	margin: 25px 0px 5px 60px;
 	font-size: 0.6em;
+	font-family: 'letra1';
 
+}
+a#vermas:hover{
+	color: #910b26;
+	text-decoration: underline;
 }
 .listaEven{
 	margin: 10px 0px 10px 10px;
@@ -231,6 +288,7 @@ a#vermas{
 }
 .title{
 	margin: 5px;
+
 }
 .cuadrado,.title{
 	display: inline-block;
@@ -240,6 +298,7 @@ a#vermas{
 .va1,.va2{
 	/*border:1px solid red;*/
 	display: inline-block;
+	font-family: 'letra1';
 }
 .va1{
 	margin: 5px 0px 0px 4px;
@@ -282,6 +341,7 @@ p.textoVi{
 	color: white;
 	font-weight: bold;
 	vertical-align: top;
+	font-family: 'letra1';
 }
 div.centro>img{
 	/*border: 1px solid red;*/
@@ -318,6 +378,7 @@ ul.lista li{
 	/*border: 1px solid gray;*/
 	margin-bottom: 10px;
 	padding: 5px;
+	font-family: 'letra1';
 }
 
 ul.lista li span.guia{
@@ -325,6 +386,7 @@ ul.lista li span.guia{
 	vertical-align: top; 
 	font-size: 14px;
 	margin-left: 9px;
+	font-family: 'letra1';
 }
 ul.lista img{
 	width: 22px;
@@ -342,6 +404,7 @@ div#view{
 p#texto{
 	color: white;
 	font-weight: bold;
+	font-family: 'letra1';
 }
 
 footer{
@@ -357,6 +420,7 @@ footer>p{
 	/*border: 1px solid yellow;*/
 	text-align: center;
 	margin-top: 20px;
+	font-family:'letra1';
 }
 div#cambio{
 	/*border: 3px solid red;*/
@@ -366,7 +430,7 @@ div#cambio{
 }
 /* QUIENES SOMOS*/
 img.banner{
-	margin: 15px 0 25px 0;
+	margin: 1px 0 25px 0;
 	width: 100%;
 	
 }
@@ -384,7 +448,8 @@ div.menuLateral,div.mostrar{
 	vertical-align: top;
 }
 div.mostrar{
-	width: 740px;
+	/*width: auto;*/
+	padding-right: 20px;
 }
 ul.menuL{
 	list-style: none;
@@ -404,6 +469,7 @@ ul.menuL li a{
 	-webkit-box-shadow: 1px 1px 14px 0px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    1px 1px 14px 0px rgba(50, 50, 50, 0.75);
 	box-shadow:         1px 1px 14px 0px rgba(50, 50, 50, 0.75);
+	font-family: 'letra1';
 }
 ul.menuL li a:hover{
 	background-color: #5f6a72;
@@ -416,6 +482,7 @@ p.top_title{
 	font-size: 20px;
 	color: #3a454d;
 	font-weight: bold;
+	font-family: 'letra1';
 
 }
 span.linea2{
@@ -436,9 +503,142 @@ p.textoN{
 	width: 670px;
 	margin-left: 32px; 
 	line-height: 1.4em;
+	font-family: 'letra1';
 }
 p.textoT{
 	font-weight: bold;
 	margin-left: 32px; 
 	line-height: 1.4em;
+}
+/* FORMULARIO*/
+.mostrar img#tituloConctacto{
+	width:75%;
+	display: block;
+	/*border: 1px solid red;*/
+	margin: 0 auto;
+}
+form{
+	/*border:1px solid red;*/
+	width: 600px;
+	margin: 15px auto;
+}
+
+
+form input[type="text"], input[type="email"]{
+	border:1px solid #CCC;
+	/*border-radius:5px;	*/
+	width:400px;
+	height:25px;
+	padding-left:5px;
+	background-color: #dddbda;
+}
+form input[type="text"]:focus, input[type="email"]:focus{
+	border: 1px solid #ccc;
+
+
+}
+form textarea{
+	border:1px solid #ccc;
+	/*border-radius:5px;	*/
+	width:400px;
+	height:100px;
+	padding:5px; 
+	background-color: #dddbda
+}
+form input[value="Enviar"]{
+	background-color: #ae6972;
+	border: 0px;
+	color: white;
+	font-family: 'latoregular';
+	padding: 10px 30px;
+	margin:10px 20px 0px 100px;
+}
+form input[value="Limpiar"]{
+	border: 0px;
+	font-family: 'latoregular';	
+	background-color: #514e4e;
+	color: white;
+	padding: 10px 30px;
+}
+	
+
+form .formSpan{
+	color: #333;
+	border: 0px solid red;
+	display: inline-block;
+	width: 100px;
+	font-family: latoregular;
+	
+}
+form div.spaceF{
+	margin: 15px 5px;
+}
+.mostrar span.linea3{
+	border-top: 1px solid #999;
+	width: 900px;
+	margin-left: 20px;
+	margin-top: 10px;
+	display: inline-block;
+	vertical-align: middle;
+}
+ /* FIN FORMULARIo */
+.mostrar div#mapa{
+	width: 600px;
+	margin: 20px auto 100px;
+}
+.mostrar div#show{
+	/*background-color: red;*/
+	overflow: hidden;
+	border-top:1px solid #514e4e;
+	border-bottom: 1px solid #514e4e;
+	font-family: 'letra1';
+	margin-top: 40px;
+
+}
+div#show #nomL{
+	float: left;
+	margin:20px 0 0 10px;
+	color: gray;
+	font-size: 14px;
+}
+div#show ul{
+	float: right;
+	list-style: none;
+}
+div#show ul li{
+	display: inline-block;
+	margin: 0px 10px;
+	cursor: pointer;
+	color: gray;
+	padding: 5px;
+	border-radius: 5px;
+}
+div#show ul li:hover{
+	display: inline-block;
+	margin: 0px 10px;
+	cursor: pointer;
+	background-color: #f5c149;
+}
+div#mostrar1{
+	/*border:1px solid red;*/
+	margin-top: 20px;
+	width: 700px;
+}
+div#mostrar1 figure.imgF{
+	display: inline-block;
+	width: 210px;
+	margin: 10px 0 30px 10px;
+	padding-left: 10px;
+}
+div#mostrar1 figure img{
+	width: 210px;
+}
+div#mostrar1 figure figcaption{
+	text-align: center;
+	padding-top: 10px;
+	/*border: 1px solid red;*/
+	font-family: 'letra1';
+	font-size: 14px;
+	color: gray;
+	font-weight: bold;
 }
