--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 
 /*Branch master*/
 
-
-
 @font-face {
     font-family: 'letra2';
     src: url('../font/quattrocento-regular-webfont.eot');
@@ -88,19 +86,7 @@ a#home:hover{
 	-o-transition: all 300ms ease-out;
     transition: all 300ms ease-out;
 }	
-/*
-div#redes
-{
-	float: right;
-	/*border: 1px solid blue;
-	margin:8px 10px 0px 0px;
-}
-#rss img, #twitter img , #face img, #utube img{
-	display: inline-block;
-	/*border: 1px solid yellow;
-	width: 32px;
-}
-*/
+
 aside#lol{
 	position: absolute;
 	top:330px;
@@ -163,17 +149,29 @@ header div#buscador input[type="search"]:focus {
 
 nav#menu{
 	/*border: 1px solid red;*/
-	width: 1100px;
+	
 	margin: 0 auto;
+	/*overflow: hidden;*/
+	padding: 0px;
+	width: 970px;
+	
+
 	/*height: 70px;*/
 }
 nav#menu ul{
-	/*border: 1px solid green;*/
-	margin: 4px 0px -2px 50px; /*  agregar al master */
+	/*border: 2px solid green;*/
+	
+	padding: 0px;
+	margin: 0 0 0 6px;
+	
+	/*display: inline-block;*/
+	/*-webkit-padding-start: 40px;*/
 }
 
 nav#menu ul li{
-	display: inline-block;		
+	display: inline-block;
+
+	/*margin:0;	*/
 }
 nav#menu ul li a{
 	text-align: center;
@@ -183,7 +181,7 @@ nav#menu ul li a{
 	display: block;
 	color: white;
 	padding: 18px;
-	border: 1px solid white;
+	border: 0px solid white;
 	width: 120px;
 	font-family: 'letra1';
 	font-weight: bold;
@@ -198,16 +196,17 @@ nav#menu ul li a:hover{
 
 
 }
+/*
 div#slider{
 	width: 1010px;
-	/*border: 1px solid red;*/
+	/*border: 1px solid red;
 	margin: 0 auto;
 
 
 }
 div#slider img{
 	width: 100%;
-}
+}*/
 section#contenido{
 	width: 1010px;
 	/*height: 600px;*/
